# sequencer

./: .gitmodules  CMakeLists.txt  demo.yaml
demo/: CMakeLists.txt  main.cpp  serializer.cpp  serializer.h  types.h
include/sequencer/: dll.h  forward.h  generator.h  sequencer.h  solver.h  types.h  utils.h
src/: generator.cpp  solver.cpp  utils.cpp
test/: CMakeLists.txt  main.cpp
